@@ -10,8 +10,6 @@
 	show_table_header("MEDIA");
 ?>
 
-<HR>
-
 <?
 	if(isset($register))
 	{
@@ -48,10 +46,10 @@
 	echo "<CENTER>";
 	echo "<TABLE BORDER=0 WIDTH=\"100%\" BGCOLOR=\"#CCCCCC\" cellspacing=1 cellpadding=3>";
 	echo "<TR>";
-	echo "<TD><FONT SIZE=+1>Type</FONT></TD>";
-	echo "<TD><FONT SIZE=+1>Send to</FONT></TD>";
-	echo "<TD><FONT SIZE=+1>Status</FONT></TD>";
-	echo "<TD><FONT SIZE=+1>Actions</FONT></TD>";
+	echo "<TD><B>Type</B></TD>";
+	echo "<TD><B>Send to</B></TD>";
+	echo "<TD><B>Status</B></TD>";
+	echo "<TD><B>Actions</B></TD>";
 	echo "</TR>";
 
 	$col=0;
